# maintinence-optimizer

./: .gitignore  README.md  pyproject.toml
doc/: reliability_evaluation.tex
docs/: cli_comands.md  project_desc.md
examples/: component_a.csv  components.csv
results/datasets/: aging_bearing.csv  balanced_fan.csv  compare_components.csv  dataset_index.csv  fragile_sensor.csv  heavy_valve.csv  stable_motor.csv  wearing_pump.csv
results/evals/aging_bearing_weibull/: metrics.csv  recommendations.csv  summary.json
results/evals/balanced_fan_both/: metrics.csv  recommendations.csv  summary.json
results/evals/compare_both/: recommendations.csv  summary.json
results/evals/compare_exponential/: metrics.csv  recommendations.csv  summary.json
results/evals/compare_weibull/: metrics.csv  summary.json
results/evals/fragile_sensor_both/: metrics.csv  recommendations.csv  summary.json
results/evals/heavy_valve_exponential/: metrics.csv  recommendations.csv  summary.json
results/evals/stable_motor_both/: metrics.csv  recommendations.csv  summary.json
results/evals/wearing_pump_weibull/: metrics.csv  recommendations.csv  summary.json
src/reliability_cli/: __init__.py  analysis.py  cli.py  io_utils.py  models.py  plotting.py  thresholds.py
tests/: test_analysis.py
