[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maintenance-optimizer"
version = "0.1.0"
description = "CLI for reliability-based maintenance interval optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8,<4.0"
]

[project.scripts]
reliability-cli = "reliability_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
